Вся логика связанная с повторением вынесена из Expression в ExpressionService